// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty state 1`] = `
.c5 {
  box-sizing: border-box;
  width: 40%;
}

.c7 {
  box-sizing: border-box;
  width: 60%;
}

.c8 {
  box-sizing: border-box;
  margin-bottom: 40px;
  padding-right: 24px;
}

.c11 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  width: 240px;
}

.c11:active {
  opacity: 0.56;
}

.c11:hover,
.c11:focus {
  background: #651FFF;
}

.c11:active {
  background: #354AA4;
}

.c11:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c4 {
  box-sizing: border-box;
  max-width: 700px;
  margin-left: auto;
  margin-right: auto;
  margin-top: 24px;
  margin-bottom: 24px;
  padding-top: 24px;
  padding-bottom: 24px;
  background-color: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c6 {
  display: block;
  outline: none;
  width: 100%;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  margin-bottom: 16px;
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  margin-bottom: 16px;
}

.c3 {
  box-sizing: border-box;
  max-width: 700px;
  margin-left: auto;
  margin-right: auto;
  margin-top: 24px;
  margin-bottom: 24px;
  padding-top: 24px;
  padding-bottom: 24px;
  background-color: #222C59;
  display: flex;
  align-items: center;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  flex-shrink: 0;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  overflow: auto;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        Apps
      </div>
    </div>
    <div
      class="c3 sc-AxirZ c4"
    >
      <div
        class="c5"
        width="0.4"
      >
        <img
          class="c6"
          width="100%"
        />
      </div>
      <div
        class="c7"
        width="0.6"
      >
        <div
          class="c8"
        >
          <div
            class="c9"
          >
            Add Your First Application
          </div>
          <div
            class="c10"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </div>
        </div>
        <button
          class="c11"
          kind="primary"
          width="240px"
        >
          Add Application
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`success state 1`] = `
.c9 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-top: auto;
  width: 100%;
}

.c9:active {
  opacity: 0.56;
}

.c9:hover,
.c9:focus {
  background: #651FFF;
}

.c9:active {
  background: #354AA4;
}

.c9:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c6 {
  display: inline-block;
  transition: color .3s;
  margin-top: 16px;
  margin-bottom: 16px;
  color: rgba(255,255,255,0.87);
  font-size: 48px;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  text-transform: uppercase;
  margin: 0px;
  margin-bottom: 4px;
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  color: rgba(255,255,255,0.87);
}

.c3 {
  box-sizing: border-box;
  display: flex;
  flex-wrap: wrap;
}

.c4 {
  box-sizing: border-box;
  margin-right: 32px;
  padding: 32px;
  height: 240px;
  width: 240px;
  background-color: #222C59;
  border-radius: 8px;
  display: flex;
  flex-direction: column;
}

.c5 {
  box-sizing: border-box;
  margin-bottom: 16px;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  flex-shrink: 0;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  overflow: auto;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        Apps
      </div>
    </div>
    <div
      class="c3"
    >
      <div
        class="c4"
        height="240px"
        style="position: relative; box-shadow: 0 8px 32px rgba(0, 0, 0, 0.24);"
        width="240px"
      >
        <div
          class="c5"
        >
          <span
            class="c6 icon icon-cloud "
            color="text.primary"
            font-size="48px"
          />
          <div
            class="c7"
          >
            jenkins
          </div>
          <div
            class="c8"
            color="text.primary"
          >
            root-cluster-name
          </div>
        </div>
        <button
          class="c9"
          kind="primary"
        >
          Launch
        </button>
      </div>
      <div
        class="c4"
        height="240px"
        style="position: relative; box-shadow: 0 8px 32px rgba(0, 0, 0, 0.24);"
        width="240px"
      >
        <div
          class="c5"
        >
          <span
            class="c6 icon icon-cloud "
            color="text.primary"
            font-size="48px"
          />
          <div
            class="c7"
          >
            github
          </div>
          <div
            class="c8"
            color="text.primary"
          >
            leaf-cluster-name
          </div>
        </div>
        <button
          class="c9"
          kind="primary"
        >
          Launch
        </button>
      </div>
      <div
        class="c4"
        height="240px"
        style="position: relative; box-shadow: 0 8px 32px rgba(0, 0, 0, 0.24);"
        width="240px"
      >
        <div
          class="c5"
        >
          <span
            class="c6 icon icon-cloud "
            color="text.primary"
            font-size="48px"
          />
          <div
            class="c7"
          >
            slack
          </div>
          <div
            class="c8"
            color="text.primary"
          >
            leaf2-cluster-longNameFormat-reallyLong
          </div>
        </div>
        <button
          class="c9"
          kind="primary"
        >
          Launch
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`viewing state 1`] = `
.c7 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c8 {
  box-sizing: border-box;
}

.c11 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c11:active {
  opacity: 0.56;
}

.c11:hover,
.c11:focus {
  background: #2C3A73;
}

.c11:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c9 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  background-color: #111B48;
  color: rgba(255,255,255,0.87);
  margin-bottom: 4px;
  margin-right: 4px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin: 0px;
  color: rgba(255,255,255,0.87);
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
  display: flex;
}

.c0 {
  padding: 32px;
  padding-top: 24px;
  background: #1C254D;
  color: rgba(255,255,255,0.87);
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 500px;
  width: 100%;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 16px;
  min-height: 32px;
  display: flex;
  align-items: center;
}

.c3 {
  box-sizing: border-box;
  margin-bottom: 32px;
  flex: 1;
  display: flex;
  flex-direction: column;
}

.c10 {
  box-sizing: border-box;
}

<div
  class="c0"
  data-testid="dialogbox"
>
  <div
    class="c1"
  >
    <div
      class="c2"
      color="text.primary"
    >
      App Details
    </div>
  </div>
  <div
    class="c3"
  >
    <div
      class="c4"
    >
      <div
        class="c5"
        style="width: 126px;"
      >
        Application
        :
      </div>
      <div
        class="c6"
      >
        slack
      </div>
    </div>
    <div
      class="c4"
    >
      <div
        class="c5"
        style="width: 126px;"
      >
        Host name
        :
      </div>
      <div
        class="c6"
      >
        slack-hostname
      </div>
    </div>
    <div
      class="c4"
    >
      <div
        class="c5"
        style="width: 126px;"
      >
        Cluster Name
        :
      </div>
      <div
        class="c6"
      >
        leaf2-cluster-longNameFormat-reallyLong
      </div>
    </div>
    <div
      class="c4"
    >
      <div
        class="c5"
        style="width: 126px;"
      >
        Internal Address
        :
      </div>
      <div
        class="c6"
      >
        localhost:8080
      </div>
    </div>
    <div
      class="c4"
    >
      <div
        class="c5"
        style="width: 126px;"
      >
        Public Address
        :
      </div>
      <div
        class="c6"
      >
        https://slack.example.com/
      </div>
    </div>
    <div
      class="c7"
    >
      <div
        class="c5"
      >
        Labels:
      </div>
      <div
        class="c8"
      >
        <div
          class="c9"
          kind="secondary"
        >
          auth: general
        </div>
        <div
          class="c9"
          kind="secondary"
        >
          tools: comms
        </div>
        <div
          class="c9"
          kind="secondary"
        >
          version: latest
        </div>
        <div
          class="c9"
          kind="secondary"
        >
          teams: all
        </div>
        <div
          class="c9"
          kind="secondary"
        >
          type: internal
        </div>
      </div>
    </div>
  </div>
  <div
    class="c10"
  >
    <button
      class="c11"
      kind="secondary"
    >
      Close
    </button>
  </div>
</div>
`;
